Fixed some overflow problems in the sidebars. Sidebar content is controlled by plugins, not templates, so dealing with them is more problematic.

--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,15 @@
   ul.inline img{
     vertical-align: baseline;
   }
+
+  #sidebar-username{
+    width: auto;
+  }
+
+  #sidebar-password{
+    width: auto;
+  }
+
+  #query{
+    width: 94%;
+  }
